For the current development, the user can 
see: https://github.com/dmpe/urlshorteneR

###
December 2020  - Allow bitly_retrieve_groups to retrieve the "general" group list
               - Add bitly_rate_limits 
               - Add ability to read stored tokens and to work non-interactively #19 
               - Upgrade all dependencies for packages

September 2020 - Add support for RStudio Addins
               - Upgrade all dependencies for packages
               
June 2019      - Update packages to their latest versions
               - Delete goo.gl API from the packages because of being deprecated by Google
               - Upgrade Bit.ly from v3 API to v4 API - causing almost a total rewrite of the package,
               with breaking changes

February 2016  - Update packages to their latest versions
               - Fix this: https://github.com/dmpe/urlshorteneR/issues/9
               - Add an information message to display when urlshorteneR package has been loaded

November 2015  - First release of a new package 'urlshorteneR', which has been developed with Andrew Collier. 
               - The archieved version of RBitly can be found here: https://cran.r-project.org/src/contrib/Archive/RBitly
               - All functions have been renamed in order to make them easier to differentiate and use in the future
               - Deleted Ow.ly and replaced it with is.gd
               
September 2015 - Smaller tweaks, which should not impact any functionality of the Bit.ly
               - Bring up-to-date with R releases
               - Added (a very) experimental support of Ow.ly (owned by Hootsuite.com). Please (!) 
               report bugs to the maintainers (see above).
               - Added a (less experimental) support of goo.gl (owned by Google.com). 
               - This is also the last release before RBitly will get achieved. Please replace with 
               devtools:install_github('dmpe/urlshorteneR') 