@@ -1,61 +1,0 @@
-# https://circleci.com/orbs/registry/orb/codecov/codecov
-version: 2.1
-orbs:
-  codecov: codecov/codecov@1.0.4
-jobs:
-  build:
-    working_directory: ~/main
-    docker:
-    - image: rocker/tidyverse:devel
-    environment:
-      NOT_CRAN: true
-      CC_TEST_REPORTER_ID: 7f6f541be829a83a1b5837e73fd74c27863326cbf6d9e5698c6d408c983c45e4
-      CODECOV_TOKEN: 'd9508b8e-7bc1-4212-a361-86d64a361045'
-    steps:
-      - checkout
-      - restore_cache:
-          keys:
-            - deps1-{{ .Branch }}
-      - run:
-          command: |
-            R -e "devtools::install_deps(dependencies = TRUE);install.packages('lintr', dependencies = TRUE);install.packages('covr', dependencies = TRUE)"  
-      - run:
-          no_output_timeout: 30m
-          command: |
-         #   R -e "library(lintr); lintr::lint_package()"
-      - save_cache:
-          key: deps1-{{ .Branch }}
-          paths:
-            - "/usr/local/lib/R/site-library"
-      #- run:
-      # https://docs.codeclimate.com/docs/circle-ci-test-coverage-example
-      #    name: Setup Code Climate test-reporter
-      #    command: |
-      #    # download test reporter as a static binary
-      #      curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
-      #      chmod +x ./cc-test-reporter
-      - run:
-          no_output_timeout: 20m
-          command: |
-            mkdir ~/main/artifacts
-            R -e "devtools::install();library(covr); covr::codecov(token='d9508b8e-7bc1-4212-a361-86d64a361045')"
-      - codecov/upload:
-          upload_name: "CodeCov Test Coverage" 
-      - run:
-          name: Build package
-          command: |
-            R -e "devtools::check(run_dont_test = F, vignettes = F)"
-            R CMD build .
-      - run:
-          name: Check package
-          command: R CMD check "${PKG_TARBALL}" --as-cran --no-manual
-      - run:
-          name: Check failures
-          command: |
-            Rscript -e "message(devtools::check_failures(path = '${RCHECK_DIR}'))"
-            # warnings are errors
-            # - run: if grep -q -R "WARNING" "${RCHECK_DIR}/00check.log"; then exit 1; fi
-      - store_artifacts:
-          path: ~/main/artifacts/
-          
-destination: artifacts
