@@ -3,8 +3,8 @@ Type: Package
 Title: R Wrapper for the 'Bit.ly' and 'Is.gd'/'v.gd' URL Shortening Services
 Description: Allows using two URL shortening services, which also provide
     expanding and analytic functions. Specifically developed for 'Bit.ly' (which requires OAuth2) and 'is.gd' (no API key).
-Version: 1.4.3
-Date: 2020-12-07
+Version: 1.5
+Date: 2021-10-31
 Authors@R: 
    c(
     person("John", "Malc", email = "cincenko@outlook.com", role = c("aut", "cre"),  comment = "@dmpe"), 
@@ -13,28 +13,28 @@ Authors@R:
 Maintainer: John Malc <cincenko@outlook.com>
 Encoding: UTF-8
 Depends:
-    R (>= 3.6)
+    R (>= 4.0)
 Imports:
     httr (>= 1.4.2),
-    jsonlite (>= 1.7.1),
+    jsonlite (>= 1.7.2),
     stringr (>= 1.4.0),
-    lubridate (>= 1.7.9),
+    lubridate (>= 1.8.0),
     assertthat (>= 0.2.1),
     shiny (>= 1.5.0),
     clipr (>= 0.7.1),
     miniUI (>= 0.1.1.1),
-    cli (>= 2.0.2)
+    cli (>= 3.1.0)
 Suggests:
-    roxygen2 (>= 7.1.1),
-    knitr (>= 1.30),
-    testthat (>= 3.0.0),
-    rmarkdown (>= 2.5),
-    httpuv (>= 1.5.4),
-    stringi (>= 1.5.3),
+    roxygen2 (>= 7.1.2),
+    knitr (>= 1.36),
+    testthat (>= 3.1.0),
+    rmarkdown (>= 2.11),
+    httpuv (>= 1.6.3),
+    stringi (>= 1.7.5),
     covr (>= 3.5.1),
     lintr (>= 2.0.1)
 VignetteBuilder: knitr
 License: Apache License 2.0
 URL: https://github.com/dmpe/urlshorteneR
 BugReports: https://github.com/dmpe/urlshorteneR/issues
-RoxygenNote: 7.1.1
+RoxygenNote: 7.1.2
