@@ -1,12 +1,10 @@
 ## Test environments
-* local linux: R 4.0.2 @ Ubuntu 20.04 LTS
-* windows: rhub
+* local linux: R 4.1 @ Ubuntu 21.10
+* linux debian @ rhub
+* windows rdevel @ rhub
 
 ## R CMD check results
 There were no ERRORs or WARNINGs. 
 
 ## Downstream dependencies
 There are currently no downstream dependencies for this package.
-
-
-
