@@ -2,6 +2,8 @@ For the current development, the user can
 see: https://github.com/dmpe/urlshorteneR
 
 ###
+November 2021  - Update package dependancies and adjust tutorial links.
+
 December 2020  - Allow bitly_retrieve_groups to retrieve the "general" group list
                - Add bitly_rate_limits 
                - Add ability to read stored tokens and to work non-interactively #19 
